--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.webpartners.wpedittext">
 
-    <application android:allowBackup="true" android:label="@string/app_name">
+    <application android:allowBackup="true" android:label="@string/wpedittext__app_name">
 
     </application>
 
