--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.webpartners.wpedittext">
 
-    <application android:allowBackup="true" android:label="@string/wpedittext__app_title_name">
-
-    </application>
+    <application android:allowBackup="true" />
 
 </manifest>
